fix: add cpp-comment class styling support

--- a/boostlook.css
+++ b/boostlook.css
@@ -1792,6 +1792,7 @@ html.dark .boostlook#libraryReadMe div.highlight:has(> pre):not(:is(dd pre, td p
 .boostlook pre span.sh,
 .boostlook pre span.comment,
 .boostlook .hljs-comment,
+.boostlook .cpp-comment,
 .boostlook .hljs-quote,
 .boostlook .hljs-addition,
 .boostlook .hljs-built_in,
@@ -1814,6 +1815,7 @@ html.dark .boostlook pre span.sd,
 html.dark .boostlook pre span.sh,
 html.dark .boostlook pre span.comment,
 html.dark .boostlook .hljs-comment,
+html.dark .boostlook .cpp-comment,
 html.dark .boostlook .hljs-quote,
 html.dark .boostlook .hljs-addition,
 html.dark .boostlook .hljs-built_in,
